--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
   flutter_native_splash: ^2.4.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
